fix scrollbar appearing during animation

--- a/prototyping/react-multi-step-form/src/custom.scss
+++ b/prototyping/react-multi-step-form/src/custom.scss
@@ -191,3 +191,13 @@ textarea {
   background-image: url("../src/progress-bg.svg");
   background-color: transparent;
 }
+
+// hack to fix scollbar appearing due to sliding framer-motion animation
+/* Hide scrollbar for Chrome, Safari and Opera */
+body::-webkit-scrollbar {
+  display: none;
+}
+/* Hide scrollbar for IE and Edge */
+body {
+  -ms-overflow-style: none;
+}
